# doculift

./: .gitignore  DATA_FLOW.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: BUILD_PLAN.md  DocuLift_PRD_MVP.md  PRD.md  doculift_mockup.html  mockup.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/claude/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/export/: mod.rs  pdf.rs
src-tauri/src/license/: mod.rs
src-tauri/src/ocr/: ffi.rs  mod.rs  pdf.rs
src-tauri/src/tier/: mod.rs
src/components/: Canvas.tsx  ClaudePanel.tsx  DocViewer.tsx  DropZone.tsx  ExportPanel.tsx  QueueSidebar.tsx  RightPanel.tsx  StatusBar.tsx  TopBar.tsx  TrustPill.tsx
src/hooks/: useOcrProcessor.ts
src/store/: queueStore.ts
src/styles/: tokens.css
src/types/: ocr.ts  queue.ts
tests/integration/: export_pdf_test.rs  generate_sample_typed.rs  generate_sample_typed_pdf.rs  ocr_test.rs  pdf_test.rs
